Bug 635552 - Avoid leaking nsAlertsIconObserver objects by using a weak reference. r=karlt