toolkit/system/gnome/nsAlertsIconListener.h
@@ -42,6 +42,7 @@
 #include "imgIDecoderObserver.h"
 #include "nsStringAPI.h"
 #include "nsIObserver.h"
+#include "nsWeakReference.h"
 
 #include <gdk-pixbuf/gdk-pixbuf.h>
 #include <libnotify/notify.h>
@@ -49,7 +50,8 @@
 class imgIRequest;
 
 class nsAlertsIconListener : public imgIDecoderObserver,
-                             public nsIObserver
+                             public nsIObserver,
+                             public nsSupportsWeakReference
 {
 public:
   NS_DECL_ISUPPORTS
@@ -80,7 +82,6 @@ protected:
 
   PRPackedBool mLoadedFrame;
   PRPackedBool mAlertHasAction;
-  PRPackedBool mHasQuit;
 
   NotifyNotification* mNotification;
   gulong mClosureHandler;
